fix: updated global styles for scrollbar

--- a/src/scss/filejet-scss/_custom.scss
+++ b/src/scss/filejet-scss/_custom.scss
@@ -332,7 +332,8 @@ input[type="text"]:focus-visible {
 }
 
 body *::-webkit-scrollbar {
-  width: rem(2);
+  width: rem(12);
+  height: rem(12);
 }
 
 body *::-webkit-scrollbar-track {
